Added audio playback test. Gave interpolator some more operators.

--- a/test/SConscript
+++ b/test/SConscript
@@ -18,7 +18,9 @@ lib_dirs = [
 
 libs = [
     'gtest',
-    'gtest_main'
+    'gtest_main',
+    'sndfile',
+    'portaudio'
 ]
 
 env.Append(CPPPATH=include_dirs)
