No compile. Split Waveform into pure-virtual base class & Wavetable

--- a/grain/SConscript
+++ b/grain/SConscript
@@ -2,7 +2,7 @@ import os
 
 Import('env')
 
-source_files = ['waveform.cpp', 'grain.cpp']
+source_files = ['waveform.cpp', 'wavetable.cpp', 'grain.cpp']
 
 grain_lib = env.Library('grain', source_files)
 
