--- a/test/SConscript
+++ b/test/SConscript
@@ -4,8 +4,8 @@ Import('env')
 Import('grain_lib')
 
 test_files = ['main.cpp',
-              'testwaveform.cpp',
-              'testgrain.cpp'
+              'testwavetable.cpp',
+              #'testgrain.cpp'
 ]
 
 include_dirs = [
