Fixed Grain to adhere to the polymorphic system

--- a/test/SConscript
+++ b/test/SConscript
@@ -5,7 +5,7 @@ Import('grain_lib')
 
 test_files = ['main.cpp',
               'testwavetable.cpp',
-              #'testgrain.cpp'
+              'testgrain.cpp'
 ]
 
 include_dirs = [
