--- a/test/SConscript
+++ b/test/SConscript
@@ -5,7 +5,8 @@ Import('grain_lib')
 
 test_files = ['main.cpp',
               'testwavetable.cpp',
-              'testgrain.cpp'
+              'testgrain.cpp',
+              'testfunctions.cpp',
 ]
 
 include_dirs = [
