--- a/test/SConscript
+++ b/test/SConscript
@@ -4,7 +4,7 @@ Import('env')
 Import('grain_lib')
 
 test_files = ['main.cpp',
-              'testwavetable.cpp',
+              # 'testwavetable.cpp',
               # 'testgrain.cpp',
               # 'testfunctions.cpp',
 ]
