Fixed unit tests for Waveform

--- a/test/SConscript
+++ b/test/SConscript
@@ -4,9 +4,7 @@ Import('env')
 Import('grain_lib')
 
 test_files = ['main.cpp',
-              # 'testwavetable.cpp',
-              # 'testgrain.cpp',
-              # 'testfunctions.cpp',
+              'testwaveform.cpp',
 ]
 
 include_dirs = [
