Updated phasor and tests

--- a/test/SConscript
+++ b/test/SConscript
@@ -5,6 +5,7 @@ Import('grain_lib')
 
 test_files = ['main.cpp',
               'testwaveform.cpp',
+              'testphasor.cpp'
 ]
 
 include_dirs = [
