--- a/grain/SConscript
+++ b/grain/SConscript
@@ -2,7 +2,7 @@ import os
 
 Import('env')
 
-source_files = ['waveform.cpp', 'phasor.cpp']# 'grain.cpp', 'slot.cpp', 'function.cpp']
+source_files = ['waveform.cpp', 'phasor.cpp',  'grain.cpp'] #, 'slot.cpp', 'function.cpp']
 
 grain_lib = env.Library('grain', source_files)
 
