--- a/test/SConscript
+++ b/test/SConscript
@@ -7,7 +7,8 @@ test_files = ['main.cpp',
               'testwaveform.cpp',
               'testphasor.cpp',
               'testgrain.cpp',
-              'testgraingen.cpp'
+              'testgraingen.cpp',
+              'testenvelope.cpp'
 ]
 
 include_dirs = [
