--- a/grain/SConscript
+++ b/grain/SConscript
@@ -7,7 +7,8 @@ source_files = ['waveform.cpp',
                 'grain.cpp',
                 'graingenerator.cpp',
                 'envelope.cpp',
-                'voice.cpp']
+                'voice.cpp',
+                'cloud.cpp']
 
 grain_lib = env.Library('grain', source_files)
 
